<resources>
    <string name="app_name">iRestaurant</string>
    <string name="restaurant_name">我的餐厅</string>
    <string name="restaurant_motto">客户就是上帝</string>
    <string name="foryou">—— 为你推荐 ——</string>
    <string name="food1">推荐菜1</string>
    <string name="food2">推荐菜2</string>
    <string name="food3">推荐菜3</string>
    <string name="food4">推荐菜4</string>
    <string name="food5">推荐菜5</string>
    <string name="food1_description">菜品描述1</string>
    <string name="food2_description"> 菜品描述2 </string>
    <string name="food3_description"> 菜品描述3 </string>
    <string name="food4_description"> 菜品描述4 </string>
    <string name="food5_description"> 菜品描述5 </string>
    <string name="notice">公告条例，请注意了,请注意了，请注意了，请注意了</string>
    <string name="seat_order">订座</string>
    <string name="food_order">订菜</string>
    <string name="hot_review">热评</string>
    <string name="about_restaurant">关于我的餐厅</string>
    <string name="discount">优惠，优惠，请注意，优惠来了</string>
    <string name="my_order">我的订单</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="guess_you_like_food_name">猜你喜欢的菜品</string>
    <string name="guess_you_like_food_description">猜你喜欢的菜品描述，描述，描述，描述,描述，描述,描述！！！</string>
    <string name="guess_you_like_food_description_collectios">收藏人数:13</string>
    <string name="order_completed">订单完成</string>
    <string name="order_doing">订单进行中</string>
    <string name="seat">桌位 ：</string>
    <string name="seat_count">15号/11人桌</string>
    <string name="date">时间</string>
    <string name="date_details">3月12日15:00\n~3月12日16:00</string>
    <string name="people">人数 ：</string>
    <string name="people_count">10</string>
    <string name="food_name">菜品 ：</string>
    <string name="food_name_first">宫保鸡丁</string>
    <string name="food_name_first_count">x1</string>
    <string name="food_name_more">···</string>
    <string name="details">详情 ></string>
    <string name="price1">总价：¥225，实付：¥225</string>
    <string name="price2">总价：¥225</string>
    <string name="not_review">未评论</string>
    <string name="seat_order_status">桌位订单状态</string>
    <string name="food_order_status">菜品订单状态</string>
    <string name="waiting_pay">订单已提交，等待支付</string>
    <string name="payed">订单已支付，请等待</string>
    <string name="remaining_time">剩余时间：10 min</string>
    <string name="cancel">取消</string>
    <string name="time_payed">3月29日 17:12</string>
    <string name="go_paying">去支付</string>
    <string name="conform">餐厅已接单</string>
    <string name="time_conform">3月29日 17:22</string>
    <string name="warn">——温馨提醒——</string>
    <string name="warn_details">\n\n\t\t亲爱的客人：\n\n\t\t\t\t\t请您在有效的时间到餐厅进行就餐，祝您用餐愉快！\n\n</string>
    <string name="order_details">订单详情</string>
    <string name="sign_register">登录/注册</string>
    <string name="help">帮助</string>
    <string name="set_up">设置</string>
    <string name="share_app">分享app给好友</string>
    <string name="icon_details"> > </string>
    <string name="version">版本：v1.0</string>
    <string name="user_name">新之助</string>
    <string name="user_description">吃货的世界你不懂</string>
    <string name="coupon">商家代金券</string>
    <string name="coupon_details">11张 ></string>
    <string name="my_review">我的评价</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_address">我的地址</string>
    <string name="sign_out">退出登录</string>
    <string name="retrieve_password">\t\u003c \t找回密码</string><!--特殊符号需要使用对应unicode字符集代替，就如本例的<符号-->
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="next_one">换</string>
    <string name="next_step">下一步</string>
    <string name="resend">重新发送</string>
    <string name="please_input_message_code">请输入短信验证码</string>
    <string name="please_input_new_password_again">请重新输入</string>
    <string name="retrieve_password_successfully">密码设置成功!</string>
    <string name="ensure">确定</string>
    <string name="disensure">取消</string>
    <string name="set_account_number">账号设置</string>
    <string name="set_head_portrait">头像设置\t></string>
    <string name="set_beijing">背景设置\t></string>
    <string name="set_user_name">用户名：</string>
    <string name="set_user_name_details">极速凌云hhh</string>
    <string name="set_password">账号密码：</string>
    <string name="set_password_details">······</string>
    <string name="set_personalized_signature">个性签名：</string>
    <string name="set_personalized_signature_details">吃货的世界你不懂</string>
    <string name="set_password_second">设置密码</string>
    <string name="old_password">旧密码：</string>
    <string name="new_password">新密码：</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="set_up_activity">\t\u003c \t设置</string>
    <string name="check">检查更新</string>
    <string name="notice_music">提醒声音</string>
    <string name="boot">开机启动</string>
    <string name="clear">清理缓存</string>
    <string name="waiting_check">检查更新中，请稍后...</string>
    <string name="check_finish_1">检查完成，已是最新版本</string>
    <string name="check_finish_2">发现新版本，是否更新？</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">新用户注册</string>
    <string name="quick_login">快捷登录</string>
    <string name="password_login">密码登录</string>
    <string name="get_message_code">获取验证码</string>
    <string name="back">\t\u003c \t返回</string>
    <string name="verification_phone_number">验证手机号码</string>
    <string name="message_code_decription">我们已经给你的手机号码15007596513发送了一条验证短信</string>
    <string name="input_message_code">输入短信验证码</string>
    <string name="time_review">2017.03.22</string>
    <string name="comprehensive_score">综合评分：</string>
    <string name="service_score">服务：</string>
    <string name="food_score">菜品：</string>
    <string name="food_names">黄焖鸡，金针菇</string>
    <string name="my_review_details">这家餐厅的服务真的没法说，菜又那么好吃，值得推荐！</string>
    <string name="do_reviewing">撰写评价</string>
    <string name="release">发布</string>
    <string name="stars">点星星评分：</string>
    <string name="please_input_review">请输入评价内容</string>
    <string name="good_foods">点赞的菜品：</string>
    <string name="add">添加</string>
    <string name="review_peoples">285人评价</string>
    <string name="review_stars_total">综合评星：</string>
    <string name="total">全部</string>
    <string name="good_reviews">好评</string>
    <string name="bad_reviews">差评</string>
    <string name="photo_reviews">有图</string>
    <string name="choose_seat">选桌位</string>
    <string name="search_text">靠窗</string>
    <string name="filter">筛选</string>
    <string name="search_keyword_1">靠窗</string>
    <string name="search_keyword_2">中央</string>
    <string name="search_keyword_3">靠门</string>
    <string name="search_keyword_4">安静</string>
    <string name="search_keyword_5">热闹</string>
    <string name="search_keyword_6">情侣</string>
    <string name="only_show_date_seat">仅显示已选时间的可选桌位></string>
    <string name="show_all_seat">显示全部桌位</string>
    <string name="seat_choose_count">2</string>
    <string name="seat_prices">¥225</string>
    <string name="seat_prices_1">¥115</string>
    <string name="clear_cart">清空</string>
    <string name="seat_name">15号桌</string>
    <string name="seat_decription">标签：8人桌，靠窗，安静，情侣，适合约会</string>
    <string name="seat_prices_2">¥118</string>
    <string name="click_to_details">点击查看更多</string>
    <string name="filter_seat_where">位置</string>
    <string name="filter_seat_where_1">靠窗</string>
    <string name="filter_seat_where_2">中央</string>
    <string name="filter_seat_where_3">靠门</string>
    <string name="filter_seat_where_4">里面</string>
    <string name="filter_seat_people">人数</string>
    <string name="filter_seat_people_1">单人</string>
    <string name="filter_seat_people_2">双人桌</string>
    <string name="filter_seat_people_3">六人桌</string>
    <string name="filter_seat_people_4">八人桌</string>
    <string name="filter_seat_people_5">十人桌</string>
    <string name="filter_seat_people_6">十二人桌</string>
    <string name="filter_seat_people_7">十六人桌</string>
    <string name="filter_seat_people_8">十八人桌</string>
    <string name="filter_seat_box">包厢</string>
    <string name="filter_seat_box_1">无包厢</string>
    <string name="filter_seat_box_2">小包厢</string>
    <string name="filter_seat_box_3">中包厢</string>
    <string name="filter_seat_box_4">大包厢</string>
    <string name="filter_seat_box_5">豪华包厢</string>
    <string name="filter_seat_type">类型</string>
    <string name="filter_seat_type_1">普通</string>
    <string name="filter_seat_type_2">高档</string>
    <string name="seat_photos">桌位图集</string>
    <string name="seat_photos_counts">1/12</string>
    <string name="please_ensure_order">桌位订单确认</string>
    <string name="submit">提交</string>
    <string name="pay_result">支付结果</string>
    <string name="reult_success">支付成功!</string>
    <string name="reult_fail">支付失败!</string>
    <string name="date_and_people">选择时间和人数</string>
    <string name="seat_select_date">时间选择</string>
    <string name="seat_select_date_show">2017:4:27，中午，11:30</string>
    <string name="seat_select_people">人数输入</string>
    <string name="seat_select_people_show">10人</string>
    <string name="choose_food">菜单</string>
    <string name="food_prices">¥115</string>
    <string name="food_choose_count">2</string>
    <string name="food_prices_1">¥115</string>
    <string name="food_choose_details_name">宫保鸡丁</string>
    <string name="food_choose_details_price">¥115</string>
    <string name="food_choose_details_decription">描述：美味，可口</string>
    <string name="please_ensure_food_order">菜品订单确认</string>
    <string name="pay_notice">温馨提示：你还可以在10min内在我的订单中进行支付，预期订单将自动取消</string>
    <string name="digits">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="order_seat">————桌位订单————</string>
    <string name="order_food">————菜品订单————</string>
    <string name="seat_flag">10号桌</string>
    <string name="help_details">欢迎使用本客户端！</string>
    <string name="set_password_back">\u003c \t设置密码</string>
    <string name="camera">拍照</string>
    <string name="photo">从相册中选择</string>
</resources>

