<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relativelayout_back"
        android:background="@color/white"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/texview_back"
            android:text="@string/back"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@color/white"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="45dp" />
        <TextView
            android:id="@+id/texview_choose_seat"
            android:text="@string/choose_seat"
            android:textSize="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/chocolate"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <TextView
            android:id="@+id/textview_search_text"
            android:text="@string/search_text"
            android:textSize="15dp"
            android:gravity="center"
            android:background="@drawable/shape_search"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="150dp"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
        <ImageView
            android:id="@+id/icon_search"
            android:gravity="center"
            android:background="@android:drawable/ic_menu_search"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="150dp"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:id="@+id/textview_filter"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:foreground="@drawable/shape_corner_rectangle_white"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_alignTop="@+id/textview_search_text"
            android:background="@drawable/shape_filter"
            android:layout_width="100dp"
            android:layout_height="32dp" />
        <TextView
            android:id="@+id/textview_search_keyword_1"
            android:text="@string/search_keyword_1"
            android:textColor="@color/white"
            android:background="@drawable/shape_corner_rectangle_white"
            android:layout_toLeftOf="@+id/textview_search_keyword_2"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_below="@+id/textview_search_text"
            android:gravity="center"
            android:layout_width="70dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/textview_search_keyword_2"
            android:text="@string/search_keyword_2"
            android:textColor="@color/white"
            android:background="@drawable/shape_corner_rectangle_white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/textview_search_text"
            android:gravity="center"
            android:layout_width="70dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/textview_search_keyword_3"
            android:text="@string/search_keyword_3"
            android:textColor="@color/white"
            android:background="@drawable/shape_corner_rectangle_white"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/textview_search_keyword_2"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/textview_search_text"
            android:gravity="center"
            android:layout_width="70dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/textview_search_keyword_4"
            android:text="@string/search_keyword_4"
            android:textColor="@color/white"
            android:background="@drawable/shape_corner_rectangle_white"
            android:layout_toLeftOf="@+id/textview_search_keyword_5"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/textview_search_keyword_1"
            android:gravity="center"
            android:layout_width="70dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/textview_search_keyword_5"
            android:text="@string/search_keyword_5"
            android:textColor="@color/white"
            android:background="@drawable/shape_corner_rectangle_white"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/textview_search_keyword_1"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_width="70dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/textview_search_keyword_6"
            android:text="@string/search_keyword_6"
            android:textColor="@color/white"
            android:background="@drawable/shape_corner_rectangle_white"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/textview_search_keyword_1"
            android:gravity="center"
            android:layout_toRightOf="@+id/textview_search_keyword_5"
            android:layout_width="70dp"
            android:layout_height="20dp" />
    </RelativeLayout>
    <TextView
        android:id="@+id/textview_only_show_date_seat"
        android:text="@string/only_show_date_seat"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="195dp"
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <ListView
        android:id="@+id/listview_seat"
        android:layout_marginTop="225dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:id="@+id/relativelayout_next"
        android:background="@color/toumingdu"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/icon_seat_cart"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:drawable/ic_menu_gallery" />
        <TextView
            android:id="@+id/textview_seat_prices"
            android:text="@string/seat_prices"
            android:layout_toRightOf="@+id/icon_seat_cart"
            android:layout_marginLeft="10dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textview_seat_choose_count"
            android:text="@string/seat_choose_count"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/white"
            android:background="@drawable/shape_corner_circular_red"
            android:layout_alignRight="@+id/icon_seat_cart"
            android:layout_alignTop="@+id/icon_seat_cart"
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/textview_next_step"
            android:text="@string/next_step"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:gravity="center"
            android:background="@drawable/shape_button_rectange"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_width="100dp"
            android:layout_height="40dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativelayout_seat_choose_details"
        android:background="@color/white"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.zhudi.irestaurant.mine.view.MyGridView
            android:id="@+id/gridview_seat_choose_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</FrameLayout>