<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:text="@string/order_details"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />
    <LinearLayout
        android:layout_gravity="top"
        android:layout_marginTop="35dp"
        android:background="@color/blackdefine"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"/>
    <TextView
        android:id="@+id/textView_seat_order_details"
        android:text="@string/seat"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_marginLeft="55dp"
        android:layout_gravity="left|top"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />
    <TextView
        android:id="@+id/textView_seat_count_order_details"
        android:text="@string/seat_count"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_marginRight="15dp"
        android:layout_gravity="right|top"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />
    <LinearLayout
        android:layout_gravity="top|left"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="55dp"
        android:background="@color/blackdefine"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"/>
    <FrameLayout
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <TextView
            android:id="@+id/textView_date_now"
            android:text="@string/date"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginLeft="55dp"
            android:layout_gravity="left"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="35dp" />
        <TextView
            android:id="@+id/textView_date_details_now"
            android:text="@string/date_details"
            android:textSize="12dp"
            android:textColor="@color/black"
            android:layout_marginRight="15dp"
            android:layout_gravity="right"
            android:gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="35dp" />
        <LinearLayout
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="55dp"
            android:background="@color/blackdefine"
            android:layout_width="match_parent"
            android:layout_height="0.4dp"/>
    </FrameLayout>
    <TextView
        android:id="@+id/textView_people_order_details"
        android:text="@string/people"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_marginLeft="55dp"
        android:layout_gravity="left|top"
        android:layout_marginTop="105dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />
    <TextView
        android:id="@+id/textView_people_count_order_details"
        android:text="@string/people_count"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_marginRight="15dp"
        android:layout_gravity="right|top"
        android:layout_marginTop="105dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />
    <LinearLayout
        android:layout_gravity="top|left"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="55dp"
        android:background="@color/blackdefine"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"/>
    <TextView
        android:id="@+id/textView_food_name_order_details"
        android:text="@string/food_name"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_marginLeft="55dp"
        android:layout_gravity="left|top"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />
    <ListView
        android:id="@+id/listview_order_details"
        android:layout_gravity="top"
        android:layout_marginTop="175dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </FrameLayout>